--- a/playbook/roles/fluentd/templates/fluent.conf.j2
+++ b/playbook/roles/fluentd/templates/fluent.conf.j2
@@ -1,14 +1,32 @@
 # fluentd/conf/fluent.conf
 <source>
+  @type tail
+  path /var/log/apache2/access_log
+  pos_file /var/log/td-agent/apache2.access_log.pos
+  <parse>
+    @type apache2
+  </parse>
+  tag apache.access
+</source>
+
+<source>
+  @type syslog
+  port 5140
+  bind 0.0.0.0
+  tag "system.#{Socket.gethostname}"
+</source>
+
+<source>
   @type forward
   port 24224
   bind 0.0.0.0
 </source>
+
 <match *.**>
   @type copy
   <store>
     @type elasticsearch
-    host 192.168.1.20
+    host 192.168.1.23
     port 9200
     logstash_format true
     logstash_prefix {{ inventory_hostname }}
